[project]
name = "repodigger"
version = "0.1.0"
description = "A tool to download and optionally analyze Java repositories from GitHub organizations based on specific criteria."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = {text = "MIT"}
dependencies = [
    "GitPython",
    "pandas",
    "requests",
]
requires-python = ">=3.8"

[project.scripts]
rd = "repodigger:main_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 