[project]
name = "repodigger"
version = "0.1.3"
description = "A tool to download and optionally analyze repositories from GitHub organizations based on specific criteria."
authors = [
    { name = "Codegass", email = "wchweichenhao@gmail.com" },
]
license = {text = "MIT"}
dependencies = [
    "GitPython",
    "pandas",
    "requests",
]
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["repodigger"]

[project.scripts]
rd = "repodigger:main_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 